# yet_another_raytracer

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  meson.build
src/: color.h  color.rs  hittable.rs  hittable_list.rs  lib.rs  main.cpp  main.rs  material.rs  ray.rs  render.rs  sphere.rs  types.rs  vec3.h
