[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[dependencies]
float-cmp = { version = "0.10.0", features = ["std"] }
glam = { version = "0.29.0", features = ["fast-math"] }
image = "0.24"
itertools = "0.13.0"
rand = "0.8.5"

[lib]
name = "raytracer"
path = "src/lib.rs"

[[bin]]
name = "raytracer_bin"
path = "src/main.rs"
